--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       env:
         MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
       run: |
-        mlflow run . -py alpha=0.5 -py beta=0.3
+        mlflow run . -P alpha=0.5 -P beta=0.3
 
     - name: Deploy to Dagshub
       env:
