--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,23 +1,27 @@
 name: ML Experiment Tracking
 
-on: [push]
+on:
+  push:
+    branches: main
 
 jobs:
   run_experiment:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
       with:
-        python-version: 3.8
+        fetch-depth: 0
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run MLflow experiment
       env:
